Attempt to fix author info link underline color in dark mode

--- a/src/components/menu-bar/author-info.css
+++ b/src/components/menu-bar/author-info.css
@@ -40,7 +40,7 @@
 
 .link {
     text-decoration: none;
-    color: $ui-white;
+    color: $ui-white !important;
 }
 .link:hover {
     text-decoration: underline;
